--- a/Mini_Projeto.ipynb
+++ b/Mini_Projeto.ipynb
@@ -19,11 +19,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib as plt\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import random as rd\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# a = np.array([1, 2, 3])\n",
+    "# b = np.array([3, 3, 3])\n",
+    "\n",
+    "# print(np.matmul(a, b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,20 +219,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "class PLA ():\n",
-    "    def __init__(self, n_int : int = 1000, tam_batch : int = 32) -> None:\n",
+    "    def __init__(self, n_int : int = 1000) -> None:\n",
     "        self.n_int = n_int\n",
-    "        self.tam_batch = tam_batch\n",
     "\n",
     "    def acuracia (self, X : np.array, Y : np.array, w_lista : np.array) -> float:\n",
+    "        lista_x = np.concatenate((np.ones((len(X), 1)), X), axis = 1)\n",
     "        soma_PCC = 0\n",
     "\n",
     "        for i in range (len(X)):\n",
-    "            aux = np.sign (np.sum(np.matmul(w_lista, X[i])))\n",
+    "            aux = np.sign(np.matmul(w_lista, lista_x[i]))\n",
     "\n",
     "            if (aux == Y[i]):\n",
     "                soma_PCC += 1\n",
@@ -228,34 +240,33 @@
     "        return (soma_PCC/len(X))\n",
     "    \n",
     "    def __construtor_PCI (self, X : np.array, Y : np.array) -> np.array:\n",
+    "        lista_x = np.concatenate((np.ones((len(X), 1)), X), axis = 1)\n",
+    "\n",
     "        lista_PCI_x = []\n",
     "        lista_PCI_y = []\n",
     "\n",
     "        for i in range (len(X)):\n",
-    "            aux = np.sign (np.sum(np.matmul(self.w_lista, X[i])))\n",
+    "            aux = np.sign(np.matmul(self.w_lista, lista_x[i]))\n",
     "\n",
     "            if (aux != Y[i]):\n",
-    "                lista_PCI_x.append(X[i])\n",
+    "                lista_PCI_x.append(lista_x[i])\n",
     "                lista_PCI_y.append(Y[i])\n",
     "        \n",
     "        return np.array(lista_PCI_x), np.array(lista_PCI_y) \n",
     "\n",
     "    def fit (self, X : np.array, Y : np.array) -> None:\n",
-    "        lista_PCI_x = X\n",
+    "        lista_PCI_x = np.concatenate((np.ones((len(X), 1)), X), axis = 1)\n",
     "        lista_PCI_y = Y\n",
-    "        self.w_lista = np.zeros(X.shape[1])\n",
+    "        self.w_lista = np.zeros(lista_PCI_x.shape[1])\n",
     "        w_otimo = self.w_lista\n",
     "\n",
     "        i = 0\n",
-    "        while (len(lista_PCI_x) > 0 or i < self.n_int):\n",
+    "        while (len(lista_PCI_x) > 0) and (i < self.n_int):\n",
     "            ale_index = np.random.randint(0, len(lista_PCI_x)) #index aleatório\n",
     "            ponto_x = lista_PCI_x[ale_index]\n",
     "            ponto_y = lista_PCI_y[ale_index]\n",
-    "\n",
-    "            # print(ponto_x)\n",
-    "            # print(ponto_y)\n",
     "            \n",
-    "            aux = ponto_x * ponto_y #x * y\n",
+    "            aux = ponto_x * ponto_y\n",
     "            w_novo = np.add(self.w_lista, aux)\n",
     "\n",
     "            if (self.acuracia (X, Y, w_otimo) < self.acuracia (X, Y, w_novo)):\n",
@@ -271,7 +282,8 @@
     "        return\n",
     "    \n",
     "    def predict (self, X : np.array) -> np.array:\n",
-    "        predict_y = [np.sign(np.matmul(i, self.w_lista)) for i in X]\n",
+    "        lista_x = np.concatenate((np.ones((len(X), 1)), X), axis = 1)\n",
+    "        predict_y = [np.sign(np.matmul(i, self.w_lista)) for i in lista_x]\n",
     "\n",
     "        return predict_y\n",
     "\n",
@@ -304,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,13 +325,20 @@
     "        self.eta = eta\n",
     "        self.n_int = n_int\n",
     "        self.tam_batch = tam_batch\n",
+    "\n",
+    "    def acuracia (self, X : np.array, Y : np.array) -> float:\n",
+    "        y_predict = self.predict(X = X)\n",
+    "        soma_PCC = 0\n",
+    "\n",
+    "        for i in range (len(Y)):\n",
+    "            if (Y[i] == y_predict[i]):\n",
+    "                soma_PCC += 1\n",
+    "            \n",
+    "        return (soma_PCC/len(Y))\n",
     "    \n",
     "    def fit (self, X : np.array, Y : np.array, eps : float = 0.0001) -> None:\n",
-    "        lista_X = X\n",
+    "        lista_X = np.concatenate((np.ones((len(X), 1)), X), axis = 1) #O 1 será usado para a multiplicação com o bias posteriormente\n",
     "        lista_y = Y\n",
-    "    \n",
-    "        for i in range (len(X)):\n",
-    "            lista_X[i].insert(0, 1) #O 1 será usado para a multiplicação com o bias posteriormente\n",
     "        \n",
     "        n_dim = len(lista_X[0])\n",
     "        n_elem = len(lista_X)\n",
@@ -327,7 +346,7 @@
     "\n",
     "        #Cálculo dos gradientes pelo processo iterativo\n",
     "        for i in range (self.n_int):\n",
-    "            vsoma = np.zeros(n_dim, dtype = float)\n",
+    "            vsoma = np.zeros(n_dim, dtype = 'float64')\n",
     "\n",
     "            if (self.tam_batch) < n_elem:\n",
     "                batch_X = []\n",
@@ -343,21 +362,27 @@
     "                batch_Y = lista_y\n",
     "            \n",
     "            for xn, yn in zip(batch_X, batch_Y):\n",
-    "                vsoma += (int(yn) * float(xn)) / 1 + np.exp(np.matmul(np.transpose(yn * w_lista), xn))\n",
+    "                vsoma = 1 / (1 + np.exp(yn * np.dot(w_lista, xn.T).reshape(-1, 1)))\n",
     "            \n",
-    "            grad_t = vsoma / self.tam_batch\n",
+    "            print(batch_X)\n",
+    "            print(batch_Y)\n",
+    "            print(vsoma)\n",
+    "            print(batch_X * batch_Y * vsoma)\n",
+    "            grad_t = (-1 / self.tam_batch) * np.sum(batch_X * batch_Y * vsoma, axis = 0)\n",
     "\n",
     "            #Testando o minimo\n",
     "            if (np.linalg.norm(grad_t) <  eps):\n",
     "                break\n",
     "\n",
-    "            w_lista = w_lista + (self.eta * grad_t)\n",
+    "            w_lista = w_lista - (self.eta * grad_t)\n",
     "        \n",
     "        self.w_lista = w_lista\n",
     "\n",
     "    def predict (self, X : np.array) -> np.array:\n",
-    "        aux = [1 / (1 + np.exp(- np.dot(self.w_lista, i))) for i in X]\n",
-    "        predict_y = [-1 if i <= 0.5 else 1 for i in aux]\n",
+    "        lista_X = np.concatenate((np.ones((len(X), 1)), X), axis = 1)\n",
+    "\n",
+    "        aux = [1 / (1 + np.exp(- np.matmul(np.transpose(self.w_lista), i))) for i in lista_X]\n",
+    "        predict_y = [1 if i >= 0.5 else -1 for i in aux]\n",
     "\n",
     "        return predict_y\n",
     "\n",
@@ -372,6 +397,70 @@
     "        self.w_lista = novo_w\n",
     "        \n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, y_train = leitor_csv (arq = \"train_redu.csv\")\n",
+    "X_test, y_test = leitor_csv (arq = \"test_redu.csv\")\n",
+    "\n",
+    "X_train, y_train = mod_labels (X = X_train, Y = y_train, labels = [1, 5])\n",
+    "X_test, y_test = mod_labels (X = X_test, Y = y_test, labels = [1, 5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([  1.        ,  98.00784314, 130.65882353]), array([ 1.        , 45.4745098 , 73.78039216]), array([  1.        ,  91.39215686, 125.30980392]), array([  1.        , 101.86666667, 130.25098039]), array([  1.        ,  87.29411765, 127.42745098]), array([ 1.        , 60.27843137, 85.51372549]), array([  1.        ,  95.86666667, 127.21568627]), array([  1.        , 102.48627451, 125.75686275]), array([  1.        ,  97.40784314, 128.50980392]), array([ 1.        , 66.16470588, 86.7372549 ]), array([  1.        ,  98.23137255, 135.10588235]), array([  1.        ,  96.43921569, 128.32156863]), array([ 1.        , 49.34509804, 77.79607843]), array([  1.        ,  86.96470588, 134.20392157]), array([ 1.        , 60.30980392, 70.23529412]), array([ 1.        , 44.70196078, 69.27058824]), array([ 1.        , 50.27843137, 61.21568627]), array([ 1.        , 68.14117647, 73.46666667]), array([  1.        ,  90.05098039, 113.61568627]), array([ 1.        , 46.23137255, 76.89411765]), array([ 1.        , 55.60392157, 75.86666667]), array([  1.        ,  95.85098039, 131.86666667]), array([  1.        ,  86.58039216, 118.66666667]), array([  1.        ,  94.45098039, 132.74509804]), array([  1.        , 101.12941176, 122.32941176]), array([  1.        ,  96.10980392, 122.25882353]), array([ 1.        , 48.69803922, 83.3254902 ]), array([ 1.        , 60.38431373, 72.10980392]), array([  1.        ,  98.11372549, 128.98039216]), array([ 1.        , 45.25098039, 68.93333333]), array([ 1.        , 45.36862745, 76.65882353]), array([ 1.        , 50.6627451 , 84.72156863])]\n",
+      "[-1, 1, -1, -1, -1, 1, -1, -1, -1, 1, -1, -1, 1, -1, 1, 1, 1, 1, -1, 1, 1, -1, -1, -1, -1, -1, 1, 1, -1, 1, 1, 1]\n",
+      "[[0.5]]\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "can't multiply sequence by non-int of type 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[15], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m logr \u001b[38;5;241m=\u001b[39m Reg_Log()\n\u001b[0;32m----> 2\u001b[0m \u001b[43mlogr\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mY\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43my_train\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m w \u001b[38;5;241m=\u001b[39m logr\u001b[38;5;241m.\u001b[39mget_w()\n\u001b[1;32m      4\u001b[0m w\n",
+      "Cell \u001b[0;32mIn[14], line 48\u001b[0m, in \u001b[0;36mReg_Log.fit\u001b[0;34m(self, X, Y, eps)\u001b[0m\n\u001b[1;32m     46\u001b[0m \u001b[38;5;28mprint\u001b[39m(batch_Y)\n\u001b[1;32m     47\u001b[0m \u001b[38;5;28mprint\u001b[39m(vsoma)\n\u001b[0;32m---> 48\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mbatch_X\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mbatch_Y\u001b[49m \u001b[38;5;241m*\u001b[39m vsoma)\n\u001b[1;32m     49\u001b[0m grad_t \u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m/\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtam_batch) \u001b[38;5;241m*\u001b[39m np\u001b[38;5;241m.\u001b[39msum(batch_X \u001b[38;5;241m*\u001b[39m batch_Y \u001b[38;5;241m*\u001b[39m vsoma, axis \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m     51\u001b[0m \u001b[38;5;66;03m#Testando o minimo\u001b[39;00m\n",
+      "\u001b[0;31mTypeError\u001b[0m: can't multiply sequence by non-int of type 'list'"
+     ]
+    }
+   ],
+   "source": [
+    "logr = Reg_Log()\n",
+    "logr.fit(X = X_train, Y = y_train)\n",
+    "w = logr.get_w()\n",
+    "w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5934819897084048\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(logr.acuracia(X = X_test, Y = y_test))"
    ]
   },
   {
@@ -418,12 +507,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "class UmVSTodos ():\n",
-    "    def __init__(self, ordem : list, n_int : int = 1000, modelo = None) -> None:\n",
+    "    def __init__ (self, ordem : list, n_int : int = 1000, modelo = None) -> None:\n",
     "        self.modelo = modelo(n_int = n_int)\n",
     "        self.ordem = ordem\n",
     "        \n",
@@ -477,19 +566,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test_1vtodos = UmVSTodos(ordem = [0, 1, 4, 5], modelo = PLA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 52.41568627,  78.00784314],\n",
-       "       [103.3372549 , 136.48627451],\n",
-       "       [129.92156863, 145.96862745],\n",
-       "       ...,\n",
-       "       [100.25098039, 113.94509804],\n",
-       "       [108.29019608, 111.81960784],\n",
-       "       [ 92.83921569, 137.30196078]])"
+       "'\\ny = ax + b\\n\\nf(x) = w[1] * x - w[2] * y + w[0]\\n'"
       ]
      },
      "execution_count": 15,
@@ -498,57 +590,19 @@
     }
    ],
    "source": [
-    "x, y = leitor_csv(arq = \"train_redu.csv\")\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(x, y, test_size = 0.2)\n",
-    "X_train"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[16], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m X_train, y_train \u001b[38;5;241m=\u001b[39m mod_labels (X \u001b[38;5;241m=\u001b[39m X_train, Y \u001b[38;5;241m=\u001b[39m y_train, labels \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m5\u001b[39m])\n\u001b[1;32m      2\u001b[0m PLA_teste \u001b[38;5;241m=\u001b[39m PLA()\n\u001b[0;32m----> 3\u001b[0m \u001b[43mPLA_teste\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mY\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43my_train\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m w \u001b[38;5;241m=\u001b[39m PLA_teste\u001b[38;5;241m.\u001b[39mget_w()\n\u001b[1;32m      5\u001b[0m w\n",
-      "Cell \u001b[0;32mIn[13], line 48\u001b[0m, in \u001b[0;36mPLA.fit\u001b[0;34m(self, X, Y)\u001b[0m\n\u001b[1;32m     45\u001b[0m aux \u001b[38;5;241m=\u001b[39m ponto_x \u001b[38;5;241m*\u001b[39m ponto_y \u001b[38;5;66;03m#x * y\u001b[39;00m\n\u001b[1;32m     46\u001b[0m w_novo \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39madd(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mw_lista, aux)\n\u001b[0;32m---> 48\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39macuracia (X, Y, w_otimo) \u001b[38;5;241m<\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43macuracia\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mY\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mw_novo\u001b[49m\u001b[43m)\u001b[49m):\n\u001b[1;32m     49\u001b[0m     w_otimo \u001b[38;5;241m=\u001b[39m w_novo\n\u001b[1;32m     51\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mw_lista \u001b[38;5;241m=\u001b[39m w_novo\n",
-      "Cell \u001b[0;32mIn[13], line 12\u001b[0m, in \u001b[0;36mPLA.acuracia\u001b[0;34m(self, X, Y, w_lista)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m (\u001b[38;5;28mlen\u001b[39m(X)):\n\u001b[1;32m     10\u001b[0m     aux \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msign (np\u001b[38;5;241m.\u001b[39msum(np\u001b[38;5;241m.\u001b[39mmatmul(w_lista, X[i])))\n\u001b[0;32m---> 12\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m (aux \u001b[38;5;241m==\u001b[39m Y[i]):\n\u001b[1;32m     13\u001b[0m         soma_PCC \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m (soma_PCC\u001b[38;5;241m/\u001b[39m\u001b[38;5;28mlen\u001b[39m(X))\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "X_train, y_train = mod_labels (X = X_train, Y = y_train, labels = [1, 5])\n",
-    "PLA_teste = PLA()\n",
-    "PLA_teste.fit(X = X_train, Y = y_train)\n",
-    "w = PLA_teste.get_w()\n",
-    "w"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "'''\n",
-    "f(x) = \n",
+    "y = ax + b\n",
     "\n",
+    "f(x) = w[1] * x - w[2] * y + w[0]\n",
     "'''\n",
-    "\n",
-    "line = np.linspace(-1, 1, 1000) \n",
-    "plt.plot(line, m*line + b, label=\"f(x)\", c=\"green\")\n",
-    "plt.show()\n",
     "\n",
     "# digitos = pd.read_csv(\"test_redu.csv\", sep = \";\")\n",
     "# sns.set_theme()\n",
-    "# sns.jointplot(data=digitos, x=\"intensidade\", y=\"simetria\", hue=\"label\", palette=\"Set2\")"
+    "# sns.jointplot(data=digitos, x=\"intensidade\", y=\"simetria\", hue=\"label\", palette=\"Set2\")\n",
+    "\n",
+    "# line = np.linspace(np.min(X_test), np.max(X_test), 1000) \n",
+    "# plt.plot(line, (-w[0] - w[1]*line) / w[2], c='orange')\n",
+    "# plt.show()"
    ]
   },
   {
