--- a/AM-Projeto1-JoaoVictorSoares-YhasmimTigre.ipynb
+++ b/AM-Projeto1-JoaoVictorSoares-YhasmimTigre.ipynb
@@ -1239,7 +1239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- É possível notar que utilizando o weight-decay, o algoritmo oferece resultados melhores tanto para com λ = 0,1 quanto para λ = 0,01."
+    "- É possível notar que utilizando o weight-decay, o algoritmo oferece resultados melhores tanto para com λ = 0,01 quanto para λ = 0,001, com o primeiro se sobressaindo aos demais."
    ]
   },
   {
